OAK-12353: (minor) remove warnings